# Uni-site-prox

./: .gitignore  README.md  pyproject.toml
api_maps/: dummyjson_auto.yaml  post.yaml  yaml.yaml
dashboard/: backend.py
dashboard/frontend/src/: App.jsx  index.css
dashboard/static/: index.html
dashboard/static/assets/: index-61WRfpSO.js  index-BEL6RxKA.css
discovery/: __init__.py  auth_detector.py  capture.py  discovery_engine.py  endpoint_classifier.py  endpoint_cluster.py  graphql_detector.py  pagination_detector.py  schema_infer.py  spec_builder.py
discovery/explorer/: __init__.py  action_queue.py  dom_inspector.py  explorer_agent.py  state_tracker.py
tests/: __init__.py  conftest.py  test_cli.py  test_discovery_components.py  test_runtimes.py  test_server_integration.py  test_spec_loader.py
universal_site_proxy/: __init__.py  __main__.py  cache.py  cli.py  models.py  registry.py  server.py  spec_loader.py
universal_site_proxy/api_maps/: dummyjson.yaml
universal_site_proxy/browser/: action_runner.py  session_manager.py  site_cookie_store.py
universal_site_proxy/plugins/: base.py  generic_browser.py  generic_http.py
universal_site_proxy/runtimes/: base.py  browser_runtime.py  http_runtime.py  hybrid_runtime.py
